# nOffice

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  release.yml
apps/ncode/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ncode/src/: App.tsx
apps/nimg/: index.html  package.json  vite.config.ts
apps/nimg/src/: App.tsx  main.tsx
apps/noffice/: index.html  package.json  tsconfig.json  vite.config.ts
apps/noffice/src/: App.tsx  main.tsx
apps/noffice/src/components/: AppShell.tsx  SidebarDock.tsx
apps/noffice/src/pages/: LauncherPage.tsx  SettingsPage.tsx
apps/nsheet/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/nsheet/src/: App.tsx
apps/nslides/: index.html  package.json  vite.config.ts
apps/nslides/src/: App.tsx
apps/nwrite/: index.html  package.json  vite.config.ts
apps/nwrite/src/: App.tsx  main.tsx
apps/nwrite/src/components/: EditorCanvas.tsx  FindReplace.tsx  Toolbar.tsx
docs/: ARCHITECTURE.md  VISION.md  comparison.html  index.html
scripts/: copy-sub-apps.mjs  download-model.mjs
site/: index.html
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: embedding.rs  manager.rs  mod.rs  model.rs  registry.rs
src-tauri/src/commands/: ai.rs  config.rs  document.rs  export.rs  mod.rs  window.rs
src-tauri/src/core/: config.rs  logging.rs
src-tauri/src/lsp_proxy/: mod.rs
(+4 files in other folders)
